--- a/index.html
+++ b/index.html
@@ -25,24 +25,7 @@
                 <h3 class="clickable">Load More NASA Images</h3>
             </span>
         </div>
-        <div class="images-container">
-            <div class="card">
-                <a href="" title="View Full Image" target="_blank">
-                    <img src="https://apod.nasa.gov/apod/image/2007/msv1500crop.jpg" alt="NASA Picture of the Day" class="card-img-top">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">Title of Image</h5>
-                    <p class="clickable">Add to Favorites</p>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius in dolores quo at impedit asperiores et praesentium perferendis, corporis magni doloribus laboriosam voluptatum quaerat! Reiciendis facilis aspernatur fugit adipisci reprehenderit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo expedita aperiam, obcaecati quidem porro perferendis veniam quod! Hic unde ullam repudiandae tempore libero inventore obcaecati consequatur, iusto earum deserunt molestiae.
-
-                    </p>
-                    <small class="text-muted">
-                        <strong>11-01-2023</strong>
-                        <span>Copyright Info</span>
-                    </small>
-                </div>
-            </div>
-        </div>
+        <div class="images-container"></div>
     </div>
     <div class="save-confirmed" hidden>
         <h1>ADDED!</h1>
